# stardb-api

./: .env.example  .gitignore  Cargo.toml  Cross.toml  Debug.Dockerfile  README.md  clean.sh  dbexport.pgsql  docker-compose.yml  flake.nix  schema.sql  temp.json
.sqlx/: query-0033ee44d918561b2cbce5c268088e94752498d91c874bda0f4e3599d9314e20.json  query-007d77a10c6a338c9659aa48514bd3e7edf249b5487fc66c0654bbc7f8907085.json  query-009fdf319f860de9b9a514f62c61c8f57532819b675de22435a31971ae8caa98.json  query-00d3afa655e8b905fd4b6f58eec72054b5a3170cd696fbb14582001d1326b3dc.json  query-016afa4bbae7c42b6b505cbaf458fce6b9357fa59be611625098948909736651.json  query-01a057b3b3468b254c2b62d3c3410e469406b7f7eb1bb47371e81d2028ec259e.json  query-01c5688f0f03c964cf32f9242faeb3dbc6b9085cf4bef35c48f1caa173625699.json  query-01cfc2648781b0e1aafcaf95dbac760098384570116580c6c36edec5f048582b.json  query-0226a8678676cccd5d87fc06f514902317002d8811e8778022a5e605e9068196.json  query-029f04a6df450d026b4b566598767f8e162fd959e84a67af737e7106f758adf2.json  query-02b0b636050a74244188aa8a8eaa585dce84c33355961dc699d05fc311dac132.json  query-02d4bc66c451c05d16947488e0e79c57a86bec5ab8f4c1ed518832fb5a228587.json  query-02dbe573ed2e31dee1b5697c0edec88915f345800a9e65d51744e86894408f82.json  query-0332a46d40aa6b5c2b62b389852c71dc79ef3e3e451157d26c002d20455ed36c.json  query-0336a83cdb6341134f306efd93413869d99ed0366a687bf93b980f75660f1a66.json  query-035e495c14dcaa136833a636b89d7c71935249f507c6daca3634a7db9512fd6c.json  query-0367cb17239a197d609ef115957f906310101662d928e117bc193408a520f560.json  query-03fab8e74fed98aee370e48a1e3cdd08f17ebe40f4a738b5db7e2506d504394b.json  query-044061471f57af0a09632966f45ea0ec71548fed4772575feaba1eda3d2a4657.json  query-0484d4e66b24b777eb2782f295cba9c4dd6e82d9c8aca83d95091335e9752c2e.json  query-04a6c317365256720a8b0a553042fe9e6f71e1209d58654d12fead91567084fc.json  query-05555a86cf7d6a5181588d5d88876b3cd592a8458ade7b205bdb7d87b676245b.json  query-05bbf26dbacd589b2edef53eb8b08ad1f673f94928fe9f27cb982b7a6af97a07.json  query-0620d309d0f8c128f831685eb7b4b7652d103e48e3c32dff1e755a4e7d1e5377.json  query-0644c18477dbb5531284c9b9850d4769a89ec8e6870ed4c06f5239f01ec0b0a9.json  query-0648a442ffd41ea2db24af2efa27a2d01b679f15fa75e1b4bb3b1719a47aa8b3.json  query-0766c26ae1f33058346ca074bd35b12fa74593899960ddb5240b1887cb4f7dc3.json  query-077a337b3706cb3dde666ad88574c0ff38bc2aba9d86f6823540b8d9c1d53523.json  query-07b6d5ce16f85b3871b99b24a01474926669e60d41c0601d74b8bb315abc15de.json  query-07dc7cfeb42ea885005a65cc3d65986b64e2693e57a2bd9ca83f857e9ba7a370.json  query-082ed9e9a2faf4d84521aacbef01b504ed64dccb46b35d8fc9867d2ae62343fc.json  query-0872723224e328e7ecb2833a716a8a2efdfe1c126f19532187c8b194183f9946.json  query-08c597346cc2a0934ed12e2994e7dd38c2ebf3abf69dc43897fd7feb51decec2.json  query-08d43e2866cf045508a8ecab655fc520c4f4771c61f5c2e72bffd4f8512e2ce8.json  query-08daf0ffb78116162889eb6a67901a9120d0751d5d24125bc16038a3d3cfc8df.json  query-08fb7445797d016fbd840c13afa2675dc54953d1bf6ce49a091232d01280a080.json  query-0934fa34a7cd5204a84596c001c51dc565ebdee7a0a144a428dd1dfdf201df83.json  query-09a28e068898e3758ffb959f7d0920b7bfe92272e7ca0f8132a9dabf6ec571c9.json  query-0a2931b01a350530cd97dd973c3be27458d31b78110024add2b320eff6241a68.json  query-0ac8de764e4530c2a0cb0425152d31f28ac1a86e4024e201ed1c915e2269b32c.json  (+926 more)
migrations/: 20230624111216_scores.sql  20230624111223_init.sql  20230624111223_users.sql  20230624111236_completed.sql  20230624111241_fuzzystrmatch;.sql  20230630025154_admins.sql  20230704090521_achivements.sql  20230724235409_achievement_versions.sql  20230811093936_mihomo.sql  20230811094000_series.sql  20230811094014_achievements.sql  20230811094056_characters.sql  20230811094124_scores_achievement.sql  20230811094129_scores_damage.sql  20230811094131_scores_heal.sql  20230811094134_scores_shield.sql  20230811094140_users.sql  20230811094432_completed.sql  20230811094436_verifications.sql  20230811094439_connections.sql  20230813223656_achievements_text.sql  20230814000909_series_text.sql  20230814044122_remove_tags.sql  20230815095926_sessions.sql  20230815134412_admins.sql  20230815185755_community_tier_list_entries.sql  20230816133815_characters_text.sql  20230817041636_achievements_percents.sql  20230817101501_achievements_video.sql  20230818182401_sessions_username.sql  20230821155431_community_tier_list_votes.sql  20230823091126_communit_tier_list_entries.sql  20230826164823_books.sql  (+109 more)
(+792 files in other folders)
