[package]
name = "stardb-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-session = "0.10.1"
actix-web = "4.9.0"
anyhow = "1.0.95"
async-process = "2.3.0"
async-rwlock = "1.3.0"
base64 = "0.22.1"
brotli = "7.0.0"
chrono = { version = "0.4.39", features = ["serde"] }
csv = "1.3.1"
dotenv = "0.15.0"
ed25519-dalek = { version = "2.1.1", features = ["pem", "rand_core"] }
futures = "0.3.31"
image = "0.25.5"
lazy_static = "1.5.0"
lettre = { version = "0.11.11", default-features = false, features = [
  "tokio1-rustls-tls",
  "builder",
  "smtp-transport",
] }
quick-xml = { version = "0.37.2", features = ["serialize"] }
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rust-argon2 = "2.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = [
  "postgres",
  "chrono",
  "uuid",
  "runtime-tokio-rustls",
] }
strum = { version = "0.26.3", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web", "reqwest"] }
uuid = { version = "1.12.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
webp = "0.3.0"
