[package]
name = "stardb-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-session = "0.10.1"
actix-web = "4.11.0"
anyhow = "1.0.98"
async-process = "2.3.0"
async-rwlock = "1.3.1"
base64 = "0.22.1"
brotli = "8.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
dotenv = "0.15.0"
ed25519-dalek = { version = "2.1.1", features = ["pem", "rand_core"] }
futures = "0.3.31"
image = "0.25.6"
lazy_static = "1.5.0"
lettre = { version = "0.11.16", default-features = false, features = [
  "tokio1-rustls-tls",
  "builder",
  "smtp-transport",
] }
quick-xml = { version = "0.37.5", features = ["serialize"] }
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rust-argon2 = "2.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = [
  "postgres",
  "chrono",
  "uuid",
  "runtime-tokio-rustls",
] }
strum = { version = "0.27.1", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
utoipa = { git = "https://github.com/juhaku/utoipa", features = [
  "actix_extras",
  "chrono",
] }
utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa", features = [
  "actix-web",
  "reqwest",
] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
webp = "0.3.0"
