[package]
name = "stardb-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-files = "0.6.8"
actix-multipart = "0.7.2"
actix-session = "0.11.0"
actix-web = "4.11.0"
anyhow = "1.0.100"
async-process = "2.5.0"
async-rwlock = "1.3.1"
base64 = "0.22.1"
brotli = "8.0.2"
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.3.1"
dotenv = "0.15.0"
ed25519-dalek = { version = "2.2.0", features = ["pem", "rand_core"] }
futures = "0.3.31"
image = "0.25.8"
lazy_static = "1.5.0"
lettre = { version = "0.11.18", default-features = false, features = [
  "tokio1-rustls-tls",
  "builder",
  "smtp-transport",
] }
quick-xml = { version = "0.38.3", features = ["serialize"] }
rand = "0.9.2"
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rust-argon2 = "3.0.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "chrono",
  "uuid",
  "runtime-tokio-rustls",
] }
strum = { version = "0.27.2", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "reqwest"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
walkdir = "2.5.0"
webp = "0.3.1"
